# animeapis

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  defs.bzl  repositories.bzl  run-openapi.sh
.github/: semantic.yml
.github/workflows/: cleanup.yaml  release.sh  release.yaml
animeshon/credentials/: credentials.proto  credentials_v1alpha1.yaml
animeshon/credentials/v1alpha1/: BUILD.bazel  credentials.proto  credentials_v1alpha1.yaml
animeshon/crossrefs/v1alpha1/: BUILD.bazel  crossrefs.proto  crossrefs_v1alpha1.yaml
animeshon/graph/v1alpha1/: BUILD.bazel  graph.proto  graph_v1alpha1.yaml
animeshon/grbac/v1alpha1/: BUILD.bazel  grbac.proto  grbac_v1alpha1.yaml
animeshon/hub/v1alpha1/: BUILD.bazel  hub.proto  hub_v1alpha1.yaml
animeshon/iam/admin/v1alpha1/: BUILD.bazel  iam.proto  iam_v1alpha1.yaml
animeshon/iam/v1alpha1/: BUILD.bazel  iam.proto  iam_v1alpha1.yaml
animeshon/identity/v1alpha1/: BUILD.bazel  identity.proto  identity_v1alpha1.yaml  internal.proto
animeshon/image/v1alpha1/: BUILD.bazel  image.proto  image_v1alpha1.yaml  internal.proto
animeshon/knowledge/v1alpha1/: BUILD.bazel  knowledge.proto  knowledge_v1alpha1.yaml
animeshon/migrator/v1alpha1/: migrator.proto  migrator_v1alpha1.yaml
animeshon/multimedia/: BUILD.bazel
animeshon/multimedia/v1alpha1/: BUILD.bazel  multimedia_v1alpha1.yaml
animeshon/oracolo/v1alpha1/: BUILD.bazel  oracolo.proto  oracolo_v1alpha1.yaml
animeshon/payment/v1alpha1/: BUILD.bazel  connect.proto  payment.proto  payment_v1alpha1.yaml  pledge.proto
animeshon/product/v1alpha1/: BUILD.bazel  product_v1alpha1.yaml
animeshon/release/v1alpha1/: BUILD.bazel  chapter.proto  release.proto  release_v1alpha1.yaml
animeshon/resourcemanager/v1alpha1/: BUILD.bazel  resourcemanager.proto  resourcemanager_v1alpha1.yaml
animeshon/tracker/v1alpha1/: BUILD.bazel  credentials.proto  internal.proto  tracker.proto  tracker_v1alpha1.yaml
animeshon/vision/v1alpha1/: BUILD.bazel  annotations.proto  internal.proto  vision.proto  vision_v1alpha1.yaml
animeshon/webcache/v1alpha1/: BUILD.bazel  webcache.proto  webcache_v1alpha1.yaml
animeshon/webpage/v1alpha1/: BUILD.bazel  archive.proto  store.proto  webpage_v1alpha1.yaml
animeshon/webproxy/v1alpha1/: BUILD.bazel  webproxy.proto  webproxy_v1alpha1.yaml
graphql/: BUILD.bazel  README.md  options.proto
openapi/v3/: BUILD.bazel  README.md
scripts/: generate-graphql.sh
scripts/graphql/: Dockerfile  run.sh
templates/markdown/rpc/: BUILD.bazel  package.md  toc.yaml
