load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_proto_library",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

proto_library(
    name = "graphql_proto",
    srcs = [
        "options.proto",
    ],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "graphql_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/opendoor-labs/protoc-gen-graphql/protobuf/graphql",
    protos = [":graphql_proto"],
    deps = [],
)
