load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_proto_library",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

proto_library(
    name = "openapi_proto",
    srcs = [
        "annotations.proto",
        "openapi.proto",
    ],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "openapi_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/gnostic/openapiv3",
    protos = [":openapi_proto"],
    deps = [],
)
