load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
    "nodejs_gapic_assembly_pkg",
    "nodejs_gapic_library",
    "proto_library_with_info",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.json"]))

proto_library(
    name = "credentials_proto",
    srcs = [
        "credentials.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_googleapis//google/iam/v1:iam_policy_proto",
        "@com_google_googleapis//google/iam/v1:policy_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

proto_library_with_info(
    name = "credentials_proto_with_info",
    deps = [
        ":credentials_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
        "@com_google_googleapis//google/rpc:error_details_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "credentials_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/animeapis/go-genproto/credentials/v1alpha1",
    protos = [":credentials_proto"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/iam/v1:iam_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
    ],
)

go_gapic_library(
    name = "credentials_go_gapic",
    srcs = [":credentials_proto_with_info"],
    grpc_service_config = "credentials_grpc_service_config.json",
    importpath = "github.com/animeapis/api-go-client/credentials/v1alpha1;credentials",
    service_yaml = "credentials_v1alpha1.yaml",
    metadata = True,
    deps = [
        ":credentials_go_proto",
        "@com_google_cloud_go//longrunning:go_default_library",
        "@com_google_cloud_go//longrunning/autogen:go_default_library",
        "@go_googleapis//google/iam/v1:iam_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
    ],
)

go_test(
    name = "credentials_go_gapic_test",
    srcs = [":credentials_go_gapic_srcjar_test"],
    embed = [":credentials_go_gapic"],
    importpath = "github.com/animeapis/api-go-client/credentials/v1alpha1",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-credentials-v1alpha1-go",
    deps = [
        ":credentials_go_gapic",
        ":credentials_go_gapic_srcjar-test.srcjar",
        ":credentials_go_proto",
    ],
)

##############################################################################
# Node.js
##############################################################################
nodejs_gapic_library(
    name = "credentials_nodejs_gapic",
    package_name = "@animeapis/credentials",
    src = ":credentials_proto_with_info",
    extra_protoc_parameters = ["metadata"],
    grpc_service_config = "credentials_grpc_service_config.json",
    package = "animeshon.credentials.v1alpha1",
    service_yaml = "credentials_v1alpha1.yaml",
    deps = [],
)

nodejs_gapic_assembly_pkg(
    name = "gapi-credentials-v1alpha1-nodejs",
    deps = [
        ":credentials_nodejs_gapic",
        ":credentials_proto",
    ],
)