load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_template_compile")
load("//:defs.bzl", "proto_graphql", "proto_openapi")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
    "nodejs_gapic_assembly_pkg",
    "nodejs_gapic_library",
    "proto_library_with_info",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.json"]))

proto_library(
    name = "graph_proto",
    srcs = [
        "graph.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:duration_proto",
    ],
)

proto_library_with_info(
    name = "graph_proto_with_info",
    deps = [
        ":graph_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
        "@com_google_googleapis//google/rpc:error_details_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "graph_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/animeapis/go-genproto/graph/v1alpha1",
    protos = [":graph_proto"],
    deps = [
        "@com_google_googleapis//google/api:annotations_go_proto",
        "@com_google_googleapis//google/longrunning:longrunning_go_proto",
    ],
)

go_gapic_library(
    name = "graph_go_gapic",
    srcs = [":graph_proto_with_info"],
    grpc_service_config = "graph_grpc_service_config.json",
    importpath = "github.com/animeapis/api-go-client/graph/v1alpha1;graph",
    service_yaml = "graph_v1alpha1.yaml",
    transport = "grpc+rest",
    metadata = True,
    deps = [
        ":graph_go_proto",
        "@com_google_googleapis//google/longrunning:longrunning_go_proto",
        "@com_google_cloud_go//longrunning:go_default_library",
        "@com_google_cloud_go//longrunning/autogen:go_default_library",
    ],
)

go_test(
    name = "graph_go_gapic_test",
    srcs = [":graph_go_gapic_srcjar_test"],
    embed = [":graph_go_gapic"],
    importpath = "github.com/animeapis/api-go-client/graph/v1alpha1",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-graph-v1alpha1-go",
    deps = [
        ":graph_go_gapic",
        ":graph_go_gapic_srcjar-test.srcjar",
        ":graph_go_proto",
    ],
)

##############################################################################
# Node.js
##############################################################################
nodejs_gapic_library(
    name = "graph_nodejs_gapic",
    package_name = "@animeapis/graph",
    src = ":graph_proto_with_info",
    extra_protoc_parameters = ["metadata"],
    grpc_service_config = "graph_grpc_service_config.json",
    package = "animeshon.graph.v1alpha1",
    service_yaml = "graph_v1alpha1.yaml",
    deps = [],
)

nodejs_gapic_assembly_pkg(
    name = "gapi-graph-v1alpha1-nodejs",
    deps = [
        ":graph_nodejs_gapic",
        ":graph_proto",
    ],
)

##############################################################################
# Markdown
##############################################################################
doc_template_compile(
    name = "package.md",
    protos = [":graph_proto"],
    template = "//templates/markdown/rpc:package.md",
)

# ToC for docs.
doc_template_compile(
    name = "toc.yaml",
    protos = [":graph_proto"],
    template = "//templates/markdown/rpc:toc.yaml",
)

##############################################################################
# GraphQL
##############################################################################
proto_graphql(
    name = "graph_proto_graphql",
    protos = [":graph_proto"],
)

##############################################################################
# OpenAPI
##############################################################################
proto_openapi(
    name = "graph_proto_openapi",
    protos = [":graph_proto"],
    options = {
        "@com_animeshon_animeapis//:openapi_plugin": [
            # "title='Graph API'", # TODO: fix bazel plugin generator.
            "title=animeshon.graph",
            "version=v1alpha1"
        ],
    },
)
