load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_template_compile")
load("//:defs.bzl", "proto_graphql", "proto_openapi")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
    "nodejs_gapic_assembly_pkg",
    "nodejs_gapic_library",
    "proto_library_with_info",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.json"]))

proto_library(
    name = "grbac_proto",
    srcs = [
        "grbac.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_googleapis//google/iam/v1:iam_policy_proto",
        "@com_google_googleapis//google/iam/v1:policy_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

proto_library_with_info(
    name = "grbac_proto_with_info",
    deps = [
        ":grbac_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
        "@com_google_googleapis//google/rpc:error_details_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "grbac_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/animeapis/go-genproto/grbac/v1alpha1",
    protos = [":grbac_proto"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/iam/v1:iam_go_proto",
    ],
)

go_gapic_library(
    name = "grbac_go_gapic",
    srcs = [":grbac_proto_with_info"],
    grpc_service_config = "grbac_grpc_service_config.json",
    importpath = "github.com/animeapis/api-go-client/grbac/v1alpha1;grbac",
    service_yaml = "grbac_v1alpha1.yaml",
    metadata = True,
    deps = [
        ":grbac_go_proto",
        "@go_googleapis//google/iam/v1:iam_go_proto",
    ],
)

go_test(
    name = "grbac_go_gapic_test",
    srcs = [":grbac_go_gapic_srcjar_test"],
    embed = [":grbac_go_gapic"],
    importpath = "github.com/animeapis/api-go-client/grbac/v1alpha1",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-grbac-v1alpha1-go",
    deps = [
        ":grbac_go_gapic",
        ":grbac_go_gapic_srcjar-test.srcjar",
        ":grbac_go_proto",
    ],
)

##############################################################################
# Node.js
##############################################################################
nodejs_gapic_library(
    name = "grbac_nodejs_gapic",
    package_name = "@animeapis/grbac",
    src = ":grbac_proto_with_info",
    extra_protoc_parameters = ["metadata"],
    grpc_service_config = "grbac_grpc_service_config.json",
    package = "animeshon.grbac.v1alpha1",
    service_yaml = "grbac_v1alpha1.yaml",
    deps = [],
)

nodejs_gapic_assembly_pkg(
    name = "gapi-grbac-v1alpha1-nodejs",
    deps = [
        ":grbac_nodejs_gapic",
        ":grbac_proto",
    ],
)

##############################################################################
# Markdown
##############################################################################
doc_template_compile(
    name = "package.md",
    protos = [":grbac_proto"],
    template = "//templates/markdown/rpc:package.md",
)

# ToC for docs.
doc_template_compile(
    name = "toc.yaml",
    protos = [":grbac_proto"],
    template = "//templates/markdown/rpc:toc.yaml",
)

##############################################################################
# GraphQL
##############################################################################
proto_graphql(
    name = "grbac_proto_graphql",
    protos = [":grbac_proto"],
)

##############################################################################
# OpenAPI
##############################################################################
proto_openapi(
    name = "grbac_proto_openapi",
    protos = [":grbac_proto"],
    options = {
        "@com_animeshon_animeapis//:openapi_plugin": [
            # "title='gRBAC API'", # TODO: fix bazel plugin generator.
            "title=animeshon.grbac",
            "version=v1alpha1"
        ],
    },
)
