load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
    "nodejs_gapic_assembly_pkg",
    "nodejs_gapic_library",
    "proto_library_with_info",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.json"]))

proto_library(
    name = "hub_proto",
    srcs = [
        "hub.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:httpbody_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

proto_library_with_info(
    name = "hub_proto_with_info",
    deps = [
        ":hub_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
        "@com_google_googleapis//google/rpc:error_details_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "hub_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/animeapis/go-genproto/hub/v1alpha1",
    protos = [":hub_proto"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
        "@go_googleapis//google/api:httpbody_go_proto",
    ],
)

go_gapic_library(
    name = "hub_go_gapic",
    srcs = [":hub_proto_with_info"],
    grpc_service_config = "hub_grpc_service_config.json",
    importpath = "github.com/animeapis/api-go-client/hub/v1alpha1;hub",
    service_yaml = "hub_v1alpha1.yaml",
    metadata = True,
    deps = [
        ":hub_go_proto",
        "@go_googleapis//google/api:httpbody_go_proto",
    ],
)

go_test(
    name = "hub_go_gapic_test",
    srcs = [":hub_go_gapic_srcjar_test"],
    embed = [":hub_go_gapic"],
    importpath = "github.com/animeapis/api-go-client/hub/v1alpha1",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-hub-v1alpha1-go",
    deps = [
        ":hub_go_gapic",
        ":hub_go_gapic_srcjar-test.srcjar",
        ":hub_go_proto",
    ],
)

##############################################################################
# Node.js
##############################################################################
nodejs_gapic_library(
    name = "hub_nodejs_gapic",
    package_name = "@animeapis/hub",
    src = ":hub_proto_with_info",
    extra_protoc_parameters = ["metadata"],
    grpc_service_config = "hub_grpc_service_config.json",
    package = "animeshon.hub.v1alpha1",
    service_yaml = "hub_v1alpha1.yaml",
    deps = [],
)

nodejs_gapic_assembly_pkg(
    name = "gapi-hub-v1alpha1-nodejs",
    deps = [
        ":hub_nodejs_gapic",
        ":hub_proto",
    ],
)