load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//doc:defs.bzl", "doc_template_compile")
load("//:defs.bzl", "proto_graphql", "proto_openapi")
load(
    "@com_google_googleapis_imports//:imports.bzl",
    "go_gapic_assembly_pkg",
    "go_gapic_library",
    "go_proto_library",
    "go_test",
    "nodejs_gapic_assembly_pkg",
    "nodejs_gapic_library",
    "proto_library_with_info",
)

# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.json"]))

proto_library(
    name = "image_proto",
    srcs = [
        "image.proto",
        "internal.proto",
    ],
    deps = [
        "@com_google_googleapis//google/api:annotations_proto",
        "@com_google_googleapis//google/api:client_proto",
        "@com_google_googleapis//google/api:field_behavior_proto",
        "@com_google_googleapis//google/api:httpbody_proto",
        "@com_google_googleapis//google/api:resource_proto",
        "@com_google_googleapis//google/iam/v1:iam_policy_proto",
        "@com_google_googleapis//google/iam/v1:policy_proto",
        "@com_google_googleapis//google/longrunning:operations_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

proto_library_with_info(
    name = "image_proto_with_info",
    deps = [
        ":image_proto",
        "@com_google_googleapis//google/cloud:common_resources_proto",
        "@com_google_googleapis//google/rpc:error_details_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "image_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/animeapis/go-genproto/image/v1alpha1",
    protos = [":image_proto"],
    deps = [
        "@com_google_googleapis//google/api:annotations_go_proto",
        "@com_google_googleapis//google/api:httpbody_go_proto",
        "@com_google_googleapis//google/iam/v1:iam_go_proto",
        "@com_google_googleapis//google/longrunning:longrunning_go_proto",
    ],
)

go_gapic_library(
    name = "image_go_gapic",
    srcs = [":image_proto_with_info"],
    grpc_service_config = "image_grpc_service_config.json",
    importpath = "github.com/animeapis/api-go-client/image/v1alpha1;image",
    service_yaml = "image_v1alpha1.yaml",
    transport = "grpc+rest",
    metadata = True,
    deps = [
        ":image_go_proto",
        "@com_google_cloud_go//longrunning:go_default_library",
        "@com_google_cloud_go//longrunning/autogen:go_default_library",
        "@com_google_googleapis//google/api:httpbody_go_proto",
        "@com_google_googleapis//google/iam/v1:iam_go_proto",
        "@com_google_googleapis//google/longrunning:longrunning_go_proto",
    ],
)

go_test(
    name = "image_go_gapic_test",
    srcs = [":image_go_gapic_srcjar_test"],
    embed = [":image_go_gapic"],
    importpath = "github.com/animeapis/api-go-client/image/v1alpha1",
)

# Open Source Packages
go_gapic_assembly_pkg(
    name = "gapi-image-v1alpha1-go",
    deps = [
        ":image_go_gapic",
        ":image_go_gapic_srcjar-test.srcjar",
        ":image_go_proto",
    ],
)

##############################################################################
# Node.js
##############################################################################
nodejs_gapic_library(
    name = "image_nodejs_gapic",
    package_name = "@animeapis/image",
    src = ":image_proto_with_info",
    extra_protoc_parameters = ["metadata"],
    grpc_service_config = "image_grpc_service_config.json",
    package = "animeshon.image.v1alpha1",
    service_yaml = "image_v1alpha1.yaml",
    deps = [],
)

nodejs_gapic_assembly_pkg(
    name = "gapi-image-v1alpha1-nodejs",
    deps = [
        ":image_nodejs_gapic",
        ":image_proto",
    ],
)

##############################################################################
# Markdown
##############################################################################
doc_template_compile(
    name = "package.md",
    protos = [":image_proto"],
    template = "//templates/markdown/rpc:package.md",
)

# ToC for docs.
doc_template_compile(
    name = "toc.yaml",
    protos = [":image_proto"],
    template = "//templates/markdown/rpc:toc.yaml",
)

##############################################################################
# GraphQL
##############################################################################
proto_graphql(
    name = "image_proto_graphql",
    protos = [":image_proto"],
)

##############################################################################
# OpenAPI
##############################################################################
proto_openapi(
    name = "image_proto_openapi",
    protos = [":image_proto"],
    options = {
        "@com_animeshon_animeapis//:openapi_plugin": [
            # "title='Image API'", # TODO: fix bazel plugin generator.
            "title=animeshon.image",
            "version=v1alpha1"
        ],
    },
)
